--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,8 +3,8 @@ kind: Component
 metadata:
   name: pipelines-java
   annotations:
-    github.com/project-slug: org-lzhuang/pipelines-java
+    dev.azure.com/project-repo: lucarval-hello-world/org-lzhuang.pipelines-java
 spec:
-  type: other
+  type: service
   lifecycle: unknown
   owner: org-lzhuang
