--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,8 @@ metadata:
   name: pipelines-java
   annotations:
     dev.azure.com/project: lucarval-hello-world
-    dev.azure.com/build-definition: lastBuild
+    dev.azure.com/project-repo: lucarval-hello-world/org-lzhuang.pipelines-java
+    dev.azure.com/build-definition: latestBuild
 spec:
   type: service
   lifecycle: unknown
