--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     dev.azure.com/project: lucarval-hello-world
     dev.azure.com/project-repo: lucarval-hello-world/org-lzhuang.pipelines-java
+    dev.azure.com/readme-path: README.md
 spec:
   type: service
   lifecycle: unknown
