--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   name: pipelines-java
   annotations:
+    dev.azure.com/project-repo: lucarval-hello-world/org-lzhuang.pipelines-java
     dev.azure.com/build-definition: Test
     dev.azure.com/project: lucarval-hello-world
 spec:
